--- a/_heat/Heat_Orchestration_Template_LB.yaml
+++ b/_heat/Heat_Orchestration_Template_LB.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-10-15
+heat_template_version: 2015-10-15 (posted 7-5-2016)
 
 description: A Group of Load Balanced Servers
 
